Fixed text alignment

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -57,6 +57,9 @@ main {
 .projects-tab {
   text-align: center;
 }
+.project-content {
+  text-align: left;
+}
 
 .project-link-icon-row {
   display: flex;
